# Gestore-Note

./: CMakeLists.txt  Collection.h  CounterObserver.h  ImportantCollection.cpp  ImportantCollection.h  Nota.cpp  Nota.h  Observer.h  README.md  Subject.h  VariousCollection.cpp  VariousCollection.h  main.cpp
GestoreNote/: CMakeLists.txt  ImportantCollection.cpp  ImportantCollection.h  Nota.cpp  Nota.h  Observer.h  Subject.h  VariousCollection.cpp  VariousCollection.h
test/: CMakeLists.txt  CollectionTest.cpp  CounterObserverTest.cpp  ImportantCollectionTest.cpp  NotaTest.cpp  VariousCollectionTest.cpp
